--- a/docker/indiecert.net-httpd.conf
+++ b/docker/indiecert.net-httpd.conf
@@ -5,13 +5,19 @@
     SSLEngine on
     SSLCertificateFile /etc/pki/tls/certs/indiecert.net.crt
     SSLCertificateKeyFile /etc/pki/tls/private/indiecert.net.key
-    SSLCipherSuite PROFILE=SYSTEM
-    SSLProtocol all -SSLv2
+
+    # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
+    SSLProtocol             all -SSLv2 -SSLv3
+    SSLCipherSuite          ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
+    SSLHonorCipherOrder     on
 
     SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
     SSLVerifyClient optional
     SSLVerifyDepth 1
     SSLOptions +ExportCertData
+
+    # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
+    Header always add Strict-Transport-Security "max-age=15768000"
 </VirtualHost>
 
 <Directory /usr/share/indiecert/web>
@@ -32,8 +38,5 @@
 
         # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
         Header set X-Frame-Options DENY
-
-        # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
-        #Header set Strict-Transport-Security max-age=604800
     </FilesMatch>
 </Directory>
