--- a/docker/indiecert.net-httpd.conf
+++ b/docker/indiecert.net-httpd.conf
@@ -1,5 +1,7 @@
 <VirtualHost *:443>
     ServerName indiecert.net
+    ServerAlias www.indiecert.net
+
     DocumentRoot /usr/share/indiecert/web
 
     SSLEngine on
