update httpd indiecert.net httpd file, and default landing page text

--- a/docker/indiecert.net-httpd.conf
+++ b/docker/indiecert.net-httpd.conf
@@ -1,3 +1,13 @@
+<VirtualHost *:80>
+    ServerName indiecert.net
+    ServerAlias www.indiecert.net
+
+    RewriteEngine On
+    RewriteCond %{HTTPS} !=on
+    RewriteCond %{ENV:HTTPS} !=on
+    RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+</VirtualHost>
+
 <VirtualHost *:443>
     ServerName indiecert.net
     ServerAlias www.indiecert.net
@@ -6,6 +16,7 @@
 
     SSLEngine on
     SSLCertificateFile /etc/pki/tls/certs/indiecert.net.crt
+    SSLCertificateChainFile /etc/pki/tls/certs/indiecert.net-chain.crt
     SSLCertificateKeyFile /etc/pki/tls/private/indiecert.net.key
 
     # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
