mention IndieCert in README instead, comment the TLS chain

--- a/docker/indiecert.net-httpd.conf
+++ b/docker/indiecert.net-httpd.conf
@@ -16,7 +16,7 @@
 
     SSLEngine on
     SSLCertificateFile /etc/pki/tls/certs/indiecert.net.crt
-    SSLCertificateChainFile /etc/pki/tls/certs/indiecert.net-chain.crt
+    #SSLCertificateChainFile /etc/pki/tls/certs/indiecert.net-chain.crt
     SSLCertificateKeyFile /etc/pki/tls/private/indiecert.net.key
 
     # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
