use dev.indiecert.net for docker

--- a/docker/dev.indiecert.net-httpd.conf
+++ b/docker/dev.indiecert.net-httpd.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-    ServerName indiecert.net
-    ServerAlias www.indiecert.net
+    ServerName dev.indiecert.net
+    #ServerAlias www.indiecert.net
 
     RewriteEngine On
     RewriteCond %{HTTPS} !=on
@@ -9,15 +9,15 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerName indiecert.net
-    ServerAlias www.indiecert.net
+    ServerName dev.indiecert.net
+    #ServerAlias www.indiecert.net
 
     DocumentRoot /usr/share/indiecert/web
 
     SSLEngine on
-    SSLCertificateFile /etc/pki/tls/certs/indiecert.net.crt
-    #SSLCertificateChainFile /etc/pki/tls/certs/indiecert.net-chain.crt
-    SSLCertificateKeyFile /etc/pki/tls/private/indiecert.net.key
+    SSLCertificateFile /etc/pki/tls/certs/dev.indiecert.net.crt
+    #SSLCertificateChainFile /etc/pki/tls/certs/dev.indiecert.net-chain.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/dev.indiecert.net.key
 
     # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
     SSLProtocol             all -SSLv2 -SSLv3
