--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,13 +10,13 @@ RUN yum copr enable -y fkooman/php-relmeauth
 RUN yum install -y indiecert; yum clean all
 
 # generate the server certificate
-RUN openssl req -subj '/CN=indiecert.net' -new -x509 -nodes -out /etc/pki/tls/certs/indiecert.net.crt -keyout /etc/pki/tls/private/indiecert.net.key
+RUN openssl req -subj '/CN=dev.indiecert.net' -new -x509 -nodes -out /etc/pki/tls/certs/dev.indiecert.net.crt -keyout /etc/pki/tls/private/dev.indiecert.net.key
 
-# empty the existing indiecert httpd config as it conflicts with indiecert.net
+# empty the existing indiecert httpd config as it conflicts with dev.indiecert.net
 RUN echo '' > /etc/httpd/conf.d/indiecert.conf
 
-# add httpd config for indiecert.net
-ADD indiecert.net-httpd.conf /etc/httpd/conf.d/indiecert.net.conf
+# add httpd config for dev.indiecert.net
+ADD dev.indiecert.net-httpd.conf /etc/httpd/conf.d/dev.indiecert.net.conf
 
 # generate a 1024 bit key, 2048 takes too long for just a Docker demo...
 RUN sed -i 's/2048/1024/' /etc/indiecert/config.ini
