- update httpd config to only ask for certificate on `/auth`

--- a/docker/dev.indiecert.net-httpd.conf
+++ b/docker/dev.indiecert.net-httpd.conf
@@ -20,36 +20,34 @@
     SSLCertificateKeyFile /etc/pki/tls/private/dev.indiecert.net.key
 
     # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
-    SSLProtocol             all -SSLv2 -SSLv3
-    SSLCipherSuite          ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
-    SSLHonorCipherOrder     on
+    SSLProtocol all -SSLv2 -SSLv3
+    SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
+    SSLHonorCipherOrder on
 
     SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
-    SSLVerifyClient optional
-    SSLVerifyDepth 1
     SSLOptions +ExportCertData
+
+    <LocationMatch "/auth">
+        SSLVerifyClient optional
+        SSLVerifyDepth 1
+    </LocationMatch>
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
     Header always add Strict-Transport-Security "max-age=15768000"
+
+    # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
+    Header always add Content-Security-Policy "default-src 'self'"
+
+    # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
+    Header always add X-Frame-Options DENY
 </VirtualHost>
 
-<Directory /usr/share/indiecert/web>
-    AllowOverride None
-    Options FollowSymLinks
-
+<Directory "/usr/share/indiecert/web">
     Require all granted
+    AllowOverride none
 
     RewriteEngine on
-    RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-
-    <FilesMatch "index.php">
-        # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
-        Header set Content-Security-Policy "default-src 'self'"
-
-        # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
-        Header set X-Frame-Options DENY
-    </FilesMatch>
 </Directory>
