--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -2,12 +2,14 @@ Alias /indiecert /usr/share/indiecert/web
 
 SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
-<Directory /usr/share/indiecert/web>
-    AllowOverride None
-    Options FollowSymLinks
-
+<LocationMatch "/indiecert/auth">
     SSLVerifyClient optional
     SSLVerifyDepth 1
+</LocationMatch>
+
+<Directory /usr/share/indiecert/web>
+    AllowOverride None
+
     SSLOptions +ExportCertData
 
     <IfModule mod_authz_core.c>
@@ -28,14 +30,12 @@ SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 
-    <FilesMatch "index.php">
-        # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
-        Header set Content-Security-Policy "default-src 'self'"
+    # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
+    Header always add Content-Security-Policy "default-src 'self'"
 
-        # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
-        Header set X-Frame-Options DENY
+    # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
+    Header always add X-Frame-Options DENY
 
-        # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
-        #Header set Strict-Transport-Security max-age=604800
-    </FilesMatch>
+    # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
+    #Header always add Strict-Transport-Security max-age=604800
 </Directory>
