--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "fkooman/cert-parser": "~0.1.7",
         "fkooman/ini": "~0.2.0",
         "fkooman/rest": "~0.6.8",
-        "guzzle/guzzle": "~3.0",
-        "php": ">=5.3.3",
+        "guzzlehttp/guzzle": "~4.0",
+        "php": ">=5.4.0",
         "phpseclib/phpseclib": "~0.3.9",
         "twig/twig": "~1.15"
     }
