use error and access log in httpd config

--- a/docker/dev.indiecert.net-httpd.conf
+++ b/docker/dev.indiecert.net-httpd.conf
@@ -2,6 +2,10 @@
     ServerName dev.indiecert.net
     #ServerAlias www.indiecert.net
 
+    ErrorLog logs/dev.indiecert.net_error_log
+    TransferLog logs/dev.indiecert.net_access_log
+    LogLevel warn
+
     RewriteEngine On
     RewriteCond %{HTTPS} !=on
     RewriteCond %{ENV:HTTPS} !=on
@@ -11,6 +15,10 @@
 <VirtualHost *:443>
     ServerName dev.indiecert.net
     #ServerAlias www.indiecert.net
+
+    ErrorLog logs/dev.indiecert.net_ssl_error_log
+    TransferLog logs/dev.indiecert.net_ssl_access_log
+    LogLevel warn
 
     DocumentRoot /usr/share/indiecert/web
 
