update fkooman/rest dependency, accept all certificates by default in httpd config

--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -1,10 +1,16 @@
 Alias /indiecert /usr/share/indiecert/web
 
-SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
+# The CA for verifying certificates and suggesting a cert in the browser,
+# enable if you want to only accept IndieCert certificates
+#SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
 <LocationMatch "/indiecert/auth">
-    SSLVerifyClient optional
-    SSLVerifyDepth 1
+    # If you want to only support the CA from IndieCert you can use this
+    #SSLVerifyClient optional
+    #SSLVerifyDepth 1
+
+    # Support all certificates (IndieCert, WebID, ...)
+    SSLVerifyClient optional_no_ca
 </LocationMatch>
 
 <Directory /usr/share/indiecert/web>
