--- a/docker/dev.indiecert.net-httpd.conf
+++ b/docker/dev.indiecert.net-httpd.conf
@@ -32,12 +32,20 @@
     SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
     SSLHonorCipherOrder on
 
-    SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
+    # Make the PEM certificate data available
     SSLOptions +ExportCertData
 
+    # The CA for verifying certificates and suggesting a cert in the browser,
+    # disable if you want to accept all certifcates (see below)
+    #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
+
     <LocationMatch "/auth">
-        SSLVerifyClient optional
-        SSLVerifyDepth 1
+        # If you want to only support the CA from IndieCert you can use this
+        #SSLVerifyClient optional
+        #SSLVerifyDepth 1
+
+        # Support all certificates (IndieCert, WebID, ...)
+        SSLVerifyClient optional_no_ca
     </LocationMatch>
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
