fix HSTS header

--- a/docker/dev.indiecert.net-httpd.conf
+++ b/docker/dev.indiecert.net-httpd.conf
@@ -49,7 +49,8 @@
     </LocationMatch>
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
-    Header always add Strict-Transport-Security "max-age=15768000"
+    # Also submit to https://hstspreload.appspot.com/!
+    Header always add Strict-Transport-Security "max-age=15768000; includeSubDomains"
 
     # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
     Header always add Content-Security-Policy "default-src 'self'"
