--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -43,5 +43,5 @@ Alias /indiecert /usr/share/indiecert/web
     Header always add X-Frame-Options DENY
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
-    #Header always add Strict-Transport-Security max-age=604800
+    #Header always add Strict-Transport-Security "max-age=15768000; includeSubDomains"
 </Directory>
