fix httpd config file

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-    ServerName dev.indiecert.net
+    ServerName indiecert.example.org
     #ServerAlias www.indiecert.net
 
-    ErrorLog logs/dev.indiecert.net_error_log
-    TransferLog logs/dev.indiecert.net_access_log
+    ErrorLog logs/indiecert.example.org_error_log
+    TransferLog logs/indiecert.example.org_access_log
     LogLevel warn
 
     RewriteEngine On
@@ -13,19 +13,19 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerName dev.indiecert.net
+    ServerName indiecert.example.org
     #ServerAlias www.indiecert.net
 
-    ErrorLog logs/dev.indiecert.net_ssl_error_log
-    TransferLog logs/dev.indiecert.net_ssl_access_log
+    ErrorLog logs/indiecert.example.org_ssl_error_log
+    TransferLog logs/indiecert.example.org_ssl_access_log
     LogLevel warn
 
     DocumentRoot /usr/share/indiecert/web
 
     SSLEngine on
-    SSLCertificateFile /etc/pki/tls/certs/dev.indiecert.net.crt
-    #SSLCertificateChainFile /etc/pki/tls/certs/dev.indiecert.net-chain.crt
-    SSLCertificateKeyFile /etc/pki/tls/private/dev.indiecert.net.key
+    SSLCertificateFile /etc/pki/tls/certs/indiecert.example.org.crt
+    #SSLCertificateChainFile /etc/pki/tls/certs/indiecert.example.org-chain.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/indiecert.example.org.key
 
     # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
     SSLProtocol all -SSLv2 -SSLv3
