add the IndieAuth header to the auth URL

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -46,6 +46,9 @@
 
         # Support all certificates (IndieCert, WebID, ...)
         SSLVerifyClient optional_no_ca
+
+        # Add the IndieAuth header
+        Header always add IndieAuth "authorization_endpoint"
     </LocationMatch>
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
