--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -11,6 +11,9 @@ Alias /indiecert /usr/share/indiecert/web
 
     # Support all certificates (IndieCert, WebID, ...)
     SSLVerifyClient optional_no_ca
+
+    # Add the IndieAuth header
+    Header always add IndieAuth "authorization_endpoint"
 </LocationMatch>
 
 <Directory /usr/share/indiecert/web>
