--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -39,6 +39,10 @@ Alias /indiecert /usr/share/indiecert/web
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 
+    # Make Authorization header available to PHP
+    RewriteCond %{HTTP:Authorization} ^(.+)$
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
     # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
     Header always add Content-Security-Policy "default-src 'self'"
 
