fix httpd config to also require certificate for confirm URL

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -47,7 +47,7 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # disable if you want to accept all certifcates (see below)
     #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
-    <LocationMatch "/auth">
+    <LocationMatch "/(auth|confirm)">
         # If you want to only support the CA from IndieCert you can use this
         #SSLVerifyClient optional
         #SSLVerifyDepth 1
