--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -4,7 +4,7 @@ Alias /indiecert /usr/share/indiecert/web
 # enable if you want to only accept IndieCert certificates
 #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
-<LocationMatch "/indiecert/auth">
+<LocationMatch "/indiecert/(auth|confirm)">
     # If you want to only support the CA from IndieCert you can use this
     #SSLVerifyClient optional
     #SSLVerifyDepth 1
