--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fkooman/cert-parser": "~0.1.7",
         "fkooman/ini": "~0.2.0",
         "fkooman/rest": "~0.8.1",
+        "fkooman/rest-plugin-bearer": "~0.4.0",
         "fkooman/rest-plugin-indieauth": "~0.2.2",
         "guzzlehttp/guzzle": "~4.0",
         "php": ">=5.4.0",
