update httpd template, mention php-fpm

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost indiecert.example.org:80>
     ServerName indiecert.example.org
     #ServerAlias www.indiecert.net
 
@@ -14,7 +14,7 @@
 
 SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
 
-<VirtualHost *:443>
+<VirtualHost indiecert.example.org:443>
     ServerName indiecert.example.org
     #ServerAlias www.indiecert.net
 
@@ -47,7 +47,7 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # disable if you want to accept all certifcates (see below)
     #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
-    <LocationMatch "/(auth|confirm)">
+    <LocationMatch "^/(auth|confirm)$">
         # If you want to only support the CA from IndieCert you can use this
         #SSLVerifyClient optional
         #SSLVerifyDepth 1
@@ -68,6 +68,9 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
 
     # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
     Header always add X-Frame-Options DENY
+
+    # Use PHP-FPM
+    #ProxyPassMatch ^/index.php(/.*)?$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/index.php$1
 </VirtualHost>
 
 <Directory "/usr/share/indiecert/web">
