--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -69,7 +69,7 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
     Header always add X-Frame-Options DENY
 
-    # Use PHP-FPM
+    # Use PHP-FPM (See https://wiki.apache.org/httpd/PHP-FPM)
     #ProxyPassMatch ^/index.php(/.*)?$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/index.php$1
 </VirtualHost>
 
