update httpd config for php-fpm

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -54,10 +54,18 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
 
         # Support all certificates (IndieCert, WebID, ...)
         SSLVerifyClient optional_no_ca
-
-        # Add the IndieAuth header
-        Header always add IndieAuth "authorization_endpoint"
     </LocationMatch>
+
+    <Directory "/usr/share/indiecert/web">
+        Options -MultiViews
+
+        Require all granted
+        AllowOverride none
+
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^(.*)$ index.php/$1 [QSA,L]
+    </Directory>
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
     # Also submit to https://hstspreload.appspot.com/!
@@ -69,20 +77,10 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
     Header always add X-Frame-Options DENY
 
-    # Use PHP-FPM (See https://wiki.apache.org/httpd/PHP-FPM)
-    #ProxyPassMatch ^/index.php(/.*)?$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/index.php$1
+    # Add the IndieAuth header
+    Header always add IndieAuth "authorization_endpoint"
+
+    # PHP-FPM
+    #SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+    #ProxyPassMatch ^/(index\.php(/.*)?)$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/$1
 </VirtualHost>
-
-<Directory "/usr/share/indiecert/web">
-    Require all granted
-    AllowOverride none
-
-    RewriteEngine on
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-
-    # Make Authorization header available to PHP
-    RewriteCond %{HTTP:Authorization} ^(.+)$
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-</Directory>
