add some more php-fpm proxy examples

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -83,4 +83,13 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # PHP-FPM
     #SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
     #ProxyPassMatch ^/(index\.php(/.*)?)$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/$1
+
+    # Wildcard matching, every request, except a few go to PHP-FPM
+    # EXPERIMENTAL!
+    # NOTE: also disable rewriting above!
+    #ProxyPassMatch /css !   (directly serve CSS files)
+    #ProxyPassMatch /robots.txt !
+    #ProxyPassMatch /favicon.ico !
+
+    #ProxyPassMatch .* fcgi://127.0.0.1:9000/usr/share/indiecert/web/index.php
 </VirtualHost>
