update fkooman/rest, use fkooman/rest-plugin-tls

--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     },
     "description": "Authentication service using client certificates",
     "license": " AGPL-3.0",
+    "minimum-stability": "dev",
     "name": "fkooman/indiecert",
     "require": {
         "ext-apcu": "*",
         "ext-openssl": "*",
-        "fkooman/cert-parser": "~0.1.7",
         "fkooman/ini": "~0.2.0",
-        "fkooman/rest": "~0.8.8",
-        "fkooman/rest-plugin-bearer": "~0.4.1",
-        "fkooman/rest-plugin-indieauth": "~0.4.0",
+        "fkooman/rest": "dev-develop",
+        "fkooman/rest-plugin-bearer": "dev-develop",
+        "fkooman/rest-plugin-indieauth": "dev-develop",
+        "fkooman/rest-plugin-tls": "dev-master",
         "guzzlehttp/guzzle": "~4.0",
         "php": ">=5.4.0",
         "phpseclib/phpseclib": "~0.3.9",
