only have the IndieAuth header on auth endpoint

--- a/docker/indiecert.example.org-httpd.conf
+++ b/docker/indiecert.example.org-httpd.conf
@@ -47,6 +47,11 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # disable if you want to accept all certifcates (see below)
     #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
+    <LocationMatch "^/auth$">
+        # Add the IndieAuth header
+        Header always add IndieAuth "authorization_endpoint"
+    </LocationMatch>
+
     <LocationMatch "^/(auth|confirm)$">
         # If you want to only support the CA from IndieCert you can use this
         #SSLVerifyClient optional
@@ -76,9 +81,6 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
 
     # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
     Header always add X-Frame-Options DENY
-
-    # Add the IndieAuth header
-    Header always add IndieAuth "authorization_endpoint"
 
     # PHP-FPM
     #SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
