update fkooman/rest again, update Docker domain to indiecert.example

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,13 +10,14 @@ RUN yum copr enable -y fkooman/php-relmeauth
 RUN yum install -y mod_ssl php-pecl-zendopcache indiecert; yum clean all
 
 # generate the server certificate
-RUN openssl req -subj '/CN=indiecert.example.org' -new -x509 -nodes -out /etc/pki/tls/certs/indiecert.example.org.crt -keyout /etc/pki/tls/private/indiecert.example.org.key
+RUN openssl req -subj '/CN=indiecert.example' -new -x509 -nodes -out /etc/pki/tls/certs/indiecert.example.crt -keyout /etc/pki/tls/private/indiecert.example.key
+RUN chmod 600 /etc/pki/tls/private/indiecert.example.key
 
-# empty the existing indiecert httpd config as it conflicts with indiecert.example.org
+# empty the existing indiecert httpd config as it conflicts with indiecert.example
 RUN echo '' > /etc/httpd/conf.d/indiecert.conf
 
-# add httpd config for indiecert.example.org
-ADD indiecert.example.org-httpd.conf /etc/httpd/conf.d/indiecert.example.org.conf
+# add httpd config for indiecert.example
+ADD indiecert.example-httpd.conf /etc/httpd/conf.d/indiecert.example.conf
 
 # Set PHP timezone, to suppress errors in the log
 RUN sed -i 's/;date.timezone =/date.timezone = UTC/' /etc/php.ini
@@ -27,7 +28,7 @@ ADD CAcert.pem /etc/pki/ca-trust/source/anchors/CAcert.pem
 RUN update-ca-trust
 
 # disable the certificate check for use within the docker image, as there is
-# no trusted certificate for "indiecert.example.org" so verification will fail...
+# no trusted certificate for "indiecert.example" so verification will fail...
 RUN sed -i 's/;disableServerCertCheck/disableServerCertCheck/' /etc/indiecert/config.ini
 
 # enable Twig template cache
