--- a/docker/indiecert.example-httpd.conf
+++ b/docker/indiecert.example-httpd.conf
@@ -1,9 +1,9 @@
-<VirtualHost indiecert.example.org:80>
-    ServerName indiecert.example.org
+<VirtualHost indiecert.example:80>
+    ServerName indiecert.example
     #ServerAlias www.indiecert.net
 
-    ErrorLog logs/indiecert.example.org_error_log
-    TransferLog logs/indiecert.example.org_access_log
+    ErrorLog logs/indiecert.example_error_log
+    TransferLog logs/indiecert.example_access_log
     LogLevel warn
 
     RewriteEngine On
@@ -14,20 +14,20 @@
 
 SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
 
-<VirtualHost indiecert.example.org:443>
-    ServerName indiecert.example.org
+<VirtualHost indiecert.example:443>
+    ServerName indiecert.example
     #ServerAlias www.indiecert.net
 
-    ErrorLog logs/indiecert.example.org_ssl_error_log
-    TransferLog logs/indiecert.example.org_ssl_access_log
+    ErrorLog logs/indiecert.example_ssl_error_log
+    TransferLog logs/indiecert.example_ssl_access_log
     LogLevel warn
 
     DocumentRoot /usr/share/indiecert/web
 
     SSLEngine on
-    SSLCertificateFile /etc/pki/tls/certs/indiecert.example.org.crt
-    #SSLCertificateChainFile /etc/pki/tls/certs/indiecert.example.org-chain.crt
-    SSLCertificateKeyFile /etc/pki/tls/private/indiecert.example.org.key
+    SSLCertificateFile /etc/pki/tls/certs/indiecert.example.crt
+    #SSLCertificateChainFile /etc/pki/tls/certs/indiecert.example-chain.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/indiecert.example.key
 
     # https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29
     SSLProtocol all -SSLv2 -SSLv3
@@ -82,8 +82,10 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
     Header always add X-Frame-Options DENY
 
+    # Send the Authorization header
+    SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+
     # PHP-FPM
-    #SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
     #ProxyPassMatch ^/(index\.php(/.*)?)$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/$1
 
     # Wildcard matching, every request, except a few go to PHP-FPM
