update docker httpd file to also support client certificates that are not directly signed by a CA

--- a/docker/indiecert.example-httpd.conf
+++ b/docker/indiecert.example-httpd.conf
@@ -53,9 +53,10 @@ SSLStaplingCache shmcb:/run/httpd/ssl_stapling(32768)
     </LocationMatch>
 
     <LocationMatch "^/(auth|confirm)$">
+        SSLVerifyDepth 5
+
         # If you want to only support the CA from IndieCert you can use this
         #SSLVerifyClient optional
-        #SSLVerifyDepth 1
 
         # Support all certificates (IndieCert, WebID, ...)
         SSLVerifyClient optional_no_ca
