update dependencies, update docker httpd config

--- a/docker/indiecert.example-httpd.conf
+++ b/docker/indiecert.example-httpd.conf
@@ -48,28 +48,30 @@ SSLVerifyDepth 5
     # disable if you want to accept all certifcates (see below)
     #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
-    <LocationMatch "^/auth$">
+    <Location "/token">
+        Header always add Access-Control-Allow-Origin "*"
+    </Location>
+
+    <Location "/auth">
         # Add the IndieAuth header
         Header always add IndieAuth "authorization_endpoint"
-    </LocationMatch>
 
-    <LocationMatch "^/(auth|confirm)$">
         # If you want to only support the CA from IndieCert you can use this
         #SSLVerifyClient optional
-
-        # Support all certificates (IndieCert, WebID, ...)
         SSLVerifyClient optional_no_ca
-    </LocationMatch>
+    </Location>
+
+    <Location "/confirm">
+        # If you want to only support the CA from IndieCert you can use this
+        #SSLVerifyClient optional
+        SSLVerifyClient optional_no_ca
+    </Location>
 
     <Directory "/usr/share/indiecert/web">
         Options -MultiViews
 
         Require all granted
         AllowOverride none
-
-        RewriteEngine On
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteRule ^(.*)$ index.php/$1 [QSA,L]
     </Directory>
 
     # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
@@ -88,12 +90,10 @@ SSLVerifyDepth 5
     # PHP-FPM
     #ProxyPassMatch ^/(index\.php(/.*)?)$ fcgi://127.0.0.1:9000/usr/share/indiecert/web/$1
 
-    # Wildcard matching, every request, except a few go to PHP-FPM
-    # EXPERIMENTAL!
-    # NOTE: also disable rewriting above!
-    #ProxyPassMatch /css !   (directly serve CSS files)
-    #ProxyPassMatch /robots.txt !
-    #ProxyPassMatch /favicon.ico !
+    # Wildcard matching, every request, except a few go to index.php on PHP-FPM
+    ProxyPassMatch /css !
+    ProxyPassMatch /robots.txt !
+    ProxyPassMatch /favicon.ico !
 
-    #ProxyPassMatch .* fcgi://127.0.0.1:9000/usr/share/indiecert/web/index.php
+    ProxyPassMatch .* fcgi://127.0.0.1:9000/usr/share/indiecert/web/index.php
 </VirtualHost>
