fix test, all deps are dev-master again

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "ext-openssl": "*",
 	"ext-pdo": "*",
         "fkooman/ini": "~0.2.0",
-        "fkooman/rest": "dev-develop",
-        "fkooman/rest-plugin-bearer": "dev-develop",
-        "fkooman/rest-plugin-indieauth": "dev-develop",
+        "fkooman/rest": "dev-master",
+        "fkooman/rest-plugin-bearer": "dev-master",
+        "fkooman/rest-plugin-indieauth": "dev-master",
         "fkooman/rest-plugin-tls": "dev-master",
         "guzzlehttp/guzzle": "~4.0",
         "php": ">=5.4.0",
