--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,11 +6,11 @@ RUN yum -y install https://download.fedoraproject.org/pub/epel/7/x86_64/e/epel-r
 
 # Enable COPR repositories
 RUN curl -s -L -o /etc/yum.repos.d/fkooman-php-base-epel-7.repo https://copr.fedoraproject.org/coprs/fkooman/php-base/repo/epel-7/fkooman-php-base-epel-7.repo
-RUN curl -s -L -o /etc/yum.repos.d/fkooman-php-oauth-epel-7.repo https://copr.fedoraproject.org/coprs/fkooman/php-oauth/repo/epel-7/fkooman-php-oauth-epel-7.repo
+RUN curl -s -L -o /etc/yum.repos.d/fkooman-indiecert-epel-7.repo https://copr.fedoraproject.org/coprs/fkooman/indiecert/repo/epel-7/fkooman-indiecert-epel-7.repo
 
 RUN yum -y update ; yum clean all
 
-RUN yum install -y mod_ssl php-pecl-zendopcache indiecert; yum clean all
+RUN yum install -y mod_ssl httpd php-fpm php-pecl-zendopcache indiecert; yum clean all
 
 # generate the server certificate
 RUN openssl req -subj '/CN=indiecert.example' -new -x509 -nodes -out /etc/pki/tls/certs/indiecert.example.crt -keyout /etc/pki/tls/private/indiecert.example.key
@@ -24,6 +24,13 @@ ADD indiecert.example-httpd.conf /etc/httpd/conf.d/indiecert.example.conf
 
 # Set PHP timezone, to suppress errors in the log
 RUN sed -i 's/;date.timezone =/date.timezone = UTC/' /etc/php.ini
+
+#https://secure.php.net/manual/en/ini.core.php#ini.expose-php
+RUN sed -i 's/expose_php = On/expose_php = Off' /etc/php.ini
+ 
+# Don't have Apache advertise all version details
+# https://httpd.apache.org/docs/2.4/mod/core.html#ServerTokens
+RUN echo 'ServerTokens ProductOnly' > /etc/httpd/conf.d/servertokens.conf
 
 # Add CAcert as a valid CA (this is pointless here as we disable certificate
 # check anyway in the next step, but for production we use this)
