--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "require": {
         "ext-apcu": "*",
         "ext-openssl": "*",
-	"ext-pdo": "*",
+        "ext-pdo": "*",
         "fkooman/ini": "~0.2.0",
-        "fkooman/rest": "dev-master",
-        "fkooman/rest-plugin-bearer": "dev-master",
-        "fkooman/rest-plugin-indieauth": "dev-master",
-        "fkooman/rest-plugin-tls": "dev-master",
+        "fkooman/rest": "~0.9.0",
+        "fkooman/rest-plugin-bearer": "~0.5.0",
+        "fkooman/rest-plugin-indieauth": "~0.5.0",
+        "fkooman/rest-plugin-tls": "~0.1.0",
         "guzzlehttp/guzzle": "~4.0",
         "php": ">=5.4.0",
         "phpseclib/phpseclib": "~0.3.9",
