update CHANGES, spec and default httpd conf

--- a/rpm/indiecert-httpd.conf
+++ b/rpm/indiecert-httpd.conf
@@ -4,44 +4,33 @@ Alias /indiecert /usr/share/indiecert/web
 # enable if you want to only accept IndieCert certificates
 #SSLCACertificateFile /var/lib/indiecert/ca/ca.crt
 
-<LocationMatch "/indiecert/(auth|confirm)">
-    # If you want to only support the CA from IndieCert you can use this
-    #SSLVerifyClient optional
-    #SSLVerifyDepth 1
+<Location "/indiecert/token">
+    Header always add Access-Control-Allow-Origin "*"
+</Location>
 
-    # Support all certificates (IndieCert, WebID, ...)
-    SSLVerifyClient optional_no_ca
-
+<Location "/indiecert/auth">
     # Add the IndieAuth header
     Header always add IndieAuth "authorization_endpoint"
-</LocationMatch>
 
-<Directory /usr/share/indiecert/web>
-    AllowOverride None
+    # If you want to only support the CA from IndieCert you can use this
+    #SSLVerifyClient optional
 
+    SSLVerifyClient optional_no_ca
+    SSLVerifyDepth 5
     SSLOptions +ExportCertData
+</Location>
 
-    <IfModule mod_authz_core.c>
-      # Apache 2.4
-      Require local
-    </IfModule>
-    <IfModule !mod_authz_core.c>
-      # Apache 2.2
-      Order Deny,Allow
-      Deny from All
-      Allow from 127.0.0.1
-      Allow from ::1
-    </IfModule>
+<Location "/indiecert/confirm">
+    # If you want to only support the CA from IndieCert you can use this
+    #SSLVerifyClient optional
+    SSLVerifyClient optional_no_ca
+    SSLVerifyDepth 5
+    SSLOptions +ExportCertData
+</Location>
 
-    RewriteEngine on
-    RewriteBase /indiecert
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-
-    # Make Authorization header available to PHP
-    RewriteCond %{HTTP:Authorization} ^(.+)$
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+<Directory "/usr/share/indiecert/web">
+    # Send the Authorization header
+    SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
 
     # CSP: https://developer.mozilla.org/en-US/docs/Security/CSP
     Header always add Content-Security-Policy "default-src 'self'"
@@ -49,6 +38,13 @@ Alias /indiecert /usr/share/indiecert/web
     # X-Frame-Options: https://developer.mozilla.org/en-US/docs/HTTP/X-Frame-Options
     Header always add X-Frame-Options DENY
 
-    # HSTS: https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
-    #Header always add Strict-Transport-Security "max-age=15768000; includeSubDomains"
+    Options -MultiViews
+
+    Require all granted
+    AllowOverride none
+
+    RewriteEngine on
+    RewriteBase /indiecert
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 </Directory>
