--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "fkooman/rest-plugin-tls": "~0.1.0",
         "guzzlehttp/guzzle": "~4.0",
         "php": ">=5.4.0",
-        "phpseclib/phpseclib": "~0.3.9",
+        "phpseclib/phpseclib": "2.0.x-dev",
         "twig/twig": "~1.15"
     }
 }
