- update and fix dependencies

--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,22 @@
     "license": " AGPL-3.0",
     "name": "fkooman/indiecert",
     "require": {
-        "ext-apcu": "*",
+        "ext-apc": "*",
+        "ext-date": "*",
+        "ext-dom": "*",
+        "ext-filter": "*",
+        "ext-libxml": "*",
         "ext-openssl": "*",
+        "ext-pcre": "*",
         "ext-pdo": "*",
+        "ext-spl": "*",
         "fkooman/ini": "~0.2.0",
         "fkooman/rest": "~0.9.0",
-        "fkooman/rest-plugin-bearer": "~0.5.0",
+        "fkooman/rest-plugin-bearer": "~0.5.1",
         "fkooman/rest-plugin-indieauth": "~0.5.0",
-        "fkooman/rest-plugin-tls": "~0.1.0",
+        "fkooman/rest-plugin-tls": "~0.1.2",
         "guzzlehttp/guzzle": "~4.0",
-        "php": ">=5.4.0",
+        "php": ">=5.4",
         "phpseclib/phpseclib": "2.0.x-dev",
         "twig/twig": "~1.15"
     }
