--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ext-pcre": "*",
         "ext-pdo": "*",
         "ext-spl": "*",
-        "fkooman/ini": "~0.2.0",
+        "fkooman/ini": "^1.0.0",
         "fkooman/rest": "~0.9.0",
         "fkooman/rest-plugin-bearer": "~0.5.3",
         "fkooman/rest-plugin-indieauth": "~0.5.2",
